tests/spec/parse/snapshots/while_let_tuple_pattern.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(pairs: Slice<Option<(int, int)>>) {
    let mut i = 0;
    while let Some((a, b)) = pairs[i] {
      print(a + b);
      i = i + 1;
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "pairs",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 5,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Slice",
                        params: [
                            Constructor {
                                name: "Option",
                                params: [
                                    Tuple {
                                        elements: [
                                            Constructor {
                                                name: "int",
                                                params: [],
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 30,
                                                    byte_length: 3,
                                                },
                                            },
                                            Constructor {
                                                name: "int",
                                                params: [],
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 35,
                                                    byte_length: 3,
                                                },
                                            },
                                        ],
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 29,
                                            byte_length: 10,
                                        },
                                    },
                                ],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 22,
                                    byte_length: 18,
                                },
                            },
                        ],
                        span: Span {
                            file_id: 0,
                            byte_offset: 16,
                            byte_length: 25,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "i",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 55,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                            mut_span: Some(
                                Span {
                                    file_id: 0,
                                    byte_offset: 51,
                                    byte_length: 3,
                                },
                            ),
                        },
                        value: Literal {
                            literal: Integer {
                                value: 0,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 59,
                                byte_length: 1,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 47,
                            byte_length: 13,
                        },
                    },
                    WhileLet {
                        pattern: EnumVariant {
                            identifier: "Some",
                            fields: [
                                Tuple {
                                    elements: [
                                        Identifier {
                                            identifier: "a",
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 80,
                                                byte_length: 1,
                                            },
                                            binding: None,
                                        },
                                        Identifier {
                                            identifier: "b",
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 83,
                                                byte_length: 1,
                                            },
                                            binding: None,
                                        },
                                    ],
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 79,
                                        byte_length: 6,
                                    },
                                },
                            ],
                            rest: false,
                            resolution: Unresolved,
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 74,
                                byte_length: 12,
                            },
                        },
                        scrutinee: IndexedAccess {
                            expression: Identifier {
                                value: "pairs",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 89,
                                    byte_length: 5,
                                },
                                resolution: Unresolved,
                            },
                            index: Identifier {
                                value: "i",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 95,
                                    byte_length: 1,
                                },
                                resolution: Unresolved,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 94,
                                byte_length: 3,
                            },
                            from_colon_syntax: false,
                        },
                        body: Block {
                            items: [
                                Call {
                                    expression: Identifier {
                                        value: "print",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 104,
                                            byte_length: 5,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [
                                        Binary {
                                            operator: Addition,
                                            left: Identifier {
                                                value: "a",
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 110,
                                                    byte_length: 1,
                                                },
                                                resolution: Unresolved,
                                            },
                                            right: Identifier {
                                                value: "b",
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 114,
                                                    byte_length: 1,
                                                },
                                                resolution: Unresolved,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 110,
                                                byte_length: 5,
                                            },
                                        },
                                    ],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 104,
                                        byte_length: 12,
                                    },
                                    call_kind: Unresolved,
                                },
                                Assignment {
                                    target: Identifier {
                                        value: "i",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 122,
                                            byte_length: 1,
                                        },
                                        resolution: Unresolved,
                                    },
                                    value: Binary {
                                        operator: Addition,
                                        left: Identifier {
                                            value: "i",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 126,
                                                byte_length: 1,
                                            },
                                            resolution: Unresolved,
                                        },
                                        right: Literal {
                                            literal: Integer {
                                                value: 1,
                                                text: None,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 130,
                                                byte_length: 1,
                                            },
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 126,
                                            byte_length: 5,
                                        },
                                    },
                                    compound_operator: None,
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 122,
                                        byte_length: 9,
                                    },
                                },
                            ],
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 98,
                                byte_length: 38,
                            },
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 64,
                            byte_length: 72,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 43,
                    byte_length: 95,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 137,
        },
    },
]
